--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
                 <a class="btn bg-[#FF4240] text-[#fff]">Get Ticket</a>
             </div>
         </div>
+
+        <div class="carousel w-full">
+            <div id="slide1" class="carousel-item relative w-full">
+                <img src="./Images/1.png" class="w-full" />
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide4" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+        </div>
     </header>
 
 
