--- a/index.html
+++ b/index.html
@@ -71,6 +71,55 @@
         </div>
     </header>
 
+    <main>
+        <section class="my-20">
+            <div class="border-y-1 border-dashed border-[#13131833] my-10 py-10">
+                <h1 class="text-center text-[36px] font-bold text-[#131318] mb-5">Professional Hockeys Club</h1>
+                <p class="w-[600px] text-center mx-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+                    turpis
+                    placerat
+                    dolor.
+                    Purus urna in
+                    sit nullam proin. </p>
+            </div>
+
+            <div class="flex justify-between gap-5 my-20">
+                <div class="text-center w-70">
+                    <div class="radial-progress text-[#FF4240]" style="--value:87;" aria-valuenow="87"
+                        role="progressbar">
+                        <span class="text-black font-bold">87%</span>
+                    </div>
+                    <h3 class="font-bold my-2">Prayer Facility</h3>
+                    <p class="text-[#13131899]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+                <div class="text-center w-70">
+                    <div class="radial-progress text-[#49D293]" style="--value:95;" aria-valuenow="95"
+                        role="progressbar">
+                        <span class="text-black font-bold">95%</span>
+                    </div>
+                    <h3 class="font-bold my-2">Experienced Coach</h3>
+                    <p class="text-[#13131899]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+                <div class="text-center w-70">
+                    <div class="radial-progress text-[#FFB546]" style="--value:90;" aria-valuenow="90"
+                        role="progressbar">
+                        <span class="text-black font-bold">90%</span>
+                    </div>
+                    <h3 class="font-bold my-2">Senior Player</h3>
+                    <p class="text-[#13131899]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+                <div class="text-center w-70">
+                    <div class="radial-progress text-[#4C8DF1]" style="--value:80;" aria-valuenow="80"
+                        role="progressbar">
+                        <span class="text-black font-bold">80%</span>
+                    </div>
+                    <h3 class="font-bold my-2">Training Ground</h3>
+                    <p class="text-[#13131899]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
 
 </body>
 
