program sections design and responsive and previous section also resoponsive

--- a/index.html
+++ b/index.html
@@ -71,11 +71,14 @@
         </div>
     </header>
 
-    <main>
+    <main class="container mx-auto px-5">
         <section class="my-20">
             <div class="border-y-1 border-dashed border-[#13131833] my-10 py-10">
-                <h1 class="text-center text-[36px] font-bold text-[#131318] mb-5">Professional Hockeys Club</h1>
-                <p class="w-[600px] text-center mx-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+                <h1 class="text-center lg:text-[36px] font-bold text-[#131318] mb-5">Professional Hockeys Club</h1>
+                <p class="lg:w-[600px] text-[10px] lg:text-[16px] text-center mx-auto">Dit amet consectetur. Condimentum
+                    dignissim
+                    adipiscing
+                    aliquam
                     turpis
                     placerat
                     dolor.
@@ -83,8 +86,8 @@
                     sit nullam proin. </p>
             </div>
 
-            <div class="flex justify-between gap-5 my-20">
-                <div class="text-center w-70">
+            <div class="flex flex-col lg:flex-row justify-between gap-5 my-20">
+                <div class="text-center w-70 mx-auto">
                     <div class="radial-progress text-[#FF4240]" style="--value:87;" aria-valuenow="87"
                         role="progressbar">
                         <span class="text-black font-bold">87%</span>
@@ -92,7 +95,7 @@
                     <h3 class="font-bold my-2">Prayer Facility</h3>
                     <p class="text-[#13131899]">Amet consectetur. Condimentum dignissim adipiscing .</p>
                 </div>
-                <div class="text-center w-70">
+                <div class="text-center w-70 mx-auto">
                     <div class="radial-progress text-[#49D293]" style="--value:95;" aria-valuenow="95"
                         role="progressbar">
                         <span class="text-black font-bold">95%</span>
@@ -100,7 +103,7 @@
                     <h3 class="font-bold my-2">Experienced Coach</h3>
                     <p class="text-[#13131899]">Amet consectetur. Condimentum dignissim adipiscing .</p>
                 </div>
-                <div class="text-center w-70">
+                <div class="text-center w-70 mx-auto">
                     <div class="radial-progress text-[#FFB546]" style="--value:90;" aria-valuenow="90"
                         role="progressbar">
                         <span class="text-black font-bold">90%</span>
@@ -108,13 +111,74 @@
                     <h3 class="font-bold my-2">Senior Player</h3>
                     <p class="text-[#13131899]">Amet consectetur. Condimentum dignissim adipiscing .</p>
                 </div>
-                <div class="text-center w-70">
+                <div class="text-center w-70 mx-auto">
                     <div class="radial-progress text-[#4C8DF1]" style="--value:80;" aria-valuenow="80"
                         role="progressbar">
                         <span class="text-black font-bold">80%</span>
                     </div>
                     <h3 class="font-bold my-2">Training Ground</h3>
                     <p class="text-[#13131899]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="my-20">
+            <div class="border-y-1 border-dashed border-[#13131833] my-10 py-10">
+                <h1 class="text-center lg:text-[36px] font-bold text-[#131318] mb-5">Program Sections</h1>
+                <p class="lg:w-[600px]  text-[10px] lg:text-[16px] text-center mx-auto">Dit amet consectetur.
+                    Condimentum dignissim adipiscing
+                    aliquam
+                    turpis
+                    placerat
+                    dolor.
+                    Purus urna in
+                    sit nullam proin. </p>
+            </div>
+            <div class="flex flex-wrap flex-col lg:flex-row justify-between gap-5 mx-auto">
+                <div class="card bg-base-100 image-full w-full lg:w-[48%] shadow-sm">
+                    <figure class="">
+                        <img src="./Images/2.png" alt="Shoes" class="w-full" />
+                    </figure>
+                    <div class="card-body lg:mt-15 lg:h-0 lg:w-[410px]">
+                        <h2 class="card-title">Junior Program</h2>
+                        <p class="lg:my-2">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
+                            enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor
+                            congue sed et in.
+                        </p>
+                        <div class="card-actions ">
+                            <button class="btn bg-[#FF4240] border-none text-white shadow-none">Register Now!</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 image-full w-full lg:w-[48%] shadow-sm">
+                    <figure>
+                        <img src="./Images/3.png" alt="Shoes" class="w-full" />
+                    </figure>
+                    <div class="card-body lg:mt-15 lg:h-0 lg:w-[410px]">
+                        <h2 class="card-title">Teenager Program</h2>
+                        <p class="lg:my-2">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
+                            enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor
+                            congue sed et in.
+                        </p>
+                        <div class="card-actions ">
+                            <button class="btn bg-[#FF4240] border-none text-white shadow-none">Register Now!</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 image-full w-full shadow-sm">
+                    <figure>
+                        <img src="./Images/4.png" alt="Shoes" class="w-full" />
+                    </figure>
+                    <div class="card-body lg:mt-25 lg:h-0 lg:w-[410px]">
+                        <h2 class="card-title">Professional Program</h2>
+                        <p class="lg:my-2">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
+                            enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor
+                            congue sed et in.
+                        </p>
+                        <div class="card-actions ">
+                            <button class="btn bg-[#FF4240] border-none text-white shadow-none">Register Now!</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
