--- a/index.html
+++ b/index.html
@@ -182,6 +182,142 @@
                 </div>
             </div>
         </section>
+
+        <section class="my-20">
+            <div class="border-y-1 border-dashed border-[#13131833] my-10 py-10">
+                <h1 class="text-center lg:text-[36px] font-bold text-[#131318] mb-5">Our New Products</h1>
+                <p class="lg:w-[600px]  text-[10px] lg:text-[16px] text-center mx-auto">Dit amet consectetur.
+                    Condimentum dignissim adipiscing
+                    aliquam
+                    turpis
+                    placerat
+                    dolor.
+                    Purus urna in
+                    sit nullam proin. </p>
+            </div>
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
+                <div class="card lg:card-side bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="./Images/5.png" alt="Album" class="p-2" />
+                    </figure>
+                    <div class="card-body p-5">
+                        <div class="text-[#13131880] flex gap-3">
+                            <span><i class="fa-solid fa-star text-[#F99808]"></i> 5.0</span>
+                            <span><i class="fa-regular fa-eye"></i> 20</span>
+                            <span><i class="fa-regular fa-heart"></i> 200</span>
+                        </div>
+                        <h2 class="card-title">World Cup Flags Football</h2>
+                        <p class="text-[16px] text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                        </p>
+                        <div class="card-actions justify-end">
+                            <p class="font-bold text-[#FF4240]">Price - $22.00</p>
+                            <span class="text-[#13131880]"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee :
+                                Free</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card lg:card-side bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="./Images/6.png" alt="Album" class="p-2" />
+                    </figure>
+                    <div class="card-body p-5">
+                        <div class="text-[#13131880] flex gap-3">
+                            <span><i class="fa-solid fa-star text-[#F99808]"></i> 5.0</span>
+                            <span><i class="fa-regular fa-eye"></i> 20</span>
+                            <span><i class="fa-regular fa-heart"></i> 200</span>
+                        </div>
+                        <h2 class="card-title">World Cup Flags Football</h2>
+                        <p class="text-[16px] text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                        </p>
+                        <div class="card-actions justify-end">
+                            <p class="font-bold text-[#FF4240]">Price - $22.00</p>
+                            <span class="text-[#13131880]"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee :
+                                Free</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card lg:card-side bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="./Images/7.png" alt="Album" class="p-2" />
+                    </figure>
+                    <div class="card-body p-5">
+                        <div class="text-[#13131880] flex gap-3">
+                            <span><i class="fa-solid fa-star text-[#F99808]"></i> 5.0</span>
+                            <span><i class="fa-regular fa-eye"></i> 20</span>
+                            <span><i class="fa-regular fa-heart"></i> 200</span>
+                        </div>
+                        <h2 class="card-title">World Cup Flags Football</h2>
+                        <p class="text-[16px] text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                        </p>
+                        <div class="card-actions justify-end">
+                            <p class="font-bold text-[#FF4240]">Price - $22.00</p>
+                            <span class="text-[#13131880]"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee :
+                                Free</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card lg:card-side bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="./Images/8.png" alt="Album" class="p-2" />
+                    </figure>
+                    <div class="card-body p-5">
+                        <div class="text-[#13131880] flex gap-3">
+                            <span><i class="fa-solid fa-star text-[#F99808]"></i> 5.0</span>
+                            <span><i class="fa-regular fa-eye"></i> 20</span>
+                            <span><i class="fa-regular fa-heart"></i> 200</span>
+                        </div>
+                        <h2 class="card-title">World Cup Flags Football</h2>
+                        <p class="text-[16px] text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                        </p>
+                        <div class="card-actions justify-end">
+                            <p class="font-bold text-[#FF4240]">Price - $22.00</p>
+                            <span class="text-[#13131880]"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee :
+                                Free</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card lg:card-side bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="./Images/9.png" alt="Album" class="p-2" />
+                    </figure>
+                    <div class="card-body p-5">
+                        <div class="text-[#13131880] flex gap-3">
+                            <span><i class="fa-solid fa-star text-[#F99808]"></i> 5.0</span>
+                            <span><i class="fa-regular fa-eye"></i> 20</span>
+                            <span><i class="fa-regular fa-heart"></i> 200</span>
+                        </div>
+                        <h2 class="card-title">World Cup Flags Football</h2>
+                        <p class="text-[16px] text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                        </p>
+                        <div class="card-actions justify-end">
+                            <p class="font-bold text-[#FF4240]">Price - $22.00</p>
+                            <span class="text-[#13131880]"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee :
+                                Free</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card lg:card-side bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="./Images/10.png" alt="Album" class="p-2" />
+                    </figure>
+                    <div class="card-body p-5">
+                        <div class="text-[#13131880] flex gap-3">
+                            <span><i class="fa-solid fa-star text-[#F99808]"></i> 5.0</span>
+                            <span><i class="fa-regular fa-eye"></i> 20</span>
+                            <span><i class="fa-regular fa-heart"></i> 200</span>
+                        </div>
+                        <h2 class="card-title">World Cup Flags Football</h2>
+                        <p class="text-[16px] text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                        </p>
+                        <div class="card-actions justify-end">
+                            <p class="font-bold text-[#FF4240]">Price - $22.00</p>
+                            <span class="text-[#13131880]"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee :
+                                Free</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
