--- a/index.html
+++ b/index.html
@@ -318,6 +318,69 @@
                 </div>
             </div>
         </section>
+
+        <section class="my-20">
+            <div class="border-y-1 border-dashed border-[#13131833] my-10 py-10">
+                <h1 class="text-center lg:text-[36px] font-bold text-[#131318] mb-5">Clients Question</h1>
+                <p class="lg:w-[600px]  text-[10px] lg:text-[16px] text-center mx-auto">Dit amet consectetur.
+                    Condimentum dignissim adipiscing
+                    aliquam
+                    turpis
+                    placerat
+                    dolor.
+                    Purus urna in
+                    sit nullam proin. </p>
+            </div>
+            <div class="flex flex-col lg:flex-row p-2 lg:p-10 justify-center rounded-lg border border-base-300">
+                <div class="">
+                    <img src="./Images/11.png" class="" alt="">
+                </div>
+                <div class="">
+                    <div class="collapse collapse-plus bg-base-100 border-b border-base-300">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-[20px] font-semibold">Our Equipment</div>
+                        <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and
+                            follow
+                            the registration process.</div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-100 border-b border-base-300">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title font-semibold text-[20px]">Hockey Training</div>
+                        <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and
+                            follow
+                            the registration process.</div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-100 border-b border-base-300">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title font-semibold text-[20px]">Private Lessons</div>
+                        <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and
+                            follow
+                            the registration process.</div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-100 border-b border-base-300">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title font-semibold text-[20px]">Ski Touring</div>
+                        <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and
+                            follow
+                            the registration process.</div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-100 border-b border-base-300">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title font-semibold text-[20px]">Booking</div>
+                        <div class="collapse-content text-sm">Click on "Forgot Password" on the login page and follow
+                            the
+                            instructions sent to your email.</div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-100 border-b border-base-300">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title font-semibold text-[20px]">Pricings</div>
+                        <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile" to
+                            make
+                            changes.</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
